fix button styles on mobile

--- a/style.sass
+++ b/style.sass
@@ -31,6 +31,7 @@ input[type=submit], #reset
 #reset
   background-color: #da8181
   margin-top: 50px
+  color: white
 
 #names
   display: flex
@@ -80,6 +81,7 @@ input[type=submit], #reset
     border: 0
     height: 30px
     font-size: 17px
+    color: white
   .positive-buttons
     width: 100%
     display: flex
